--- a/platformio.ini
+++ b/platformio.ini
@@ -9,9 +9,12 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:uno]
-platform = atmelavr
-board = uno
+platform = espressif32
+board = arduino_nano_esp32
 framework = arduino
 build_flags = 
-    -std=gnu++17 -Wall
+	-std=gnu++17 -Wall
 build_unflags = -std=gnu++11
+lib_deps = 
+	nitrofmtl/MicroTuple@^1.1
+	hideakitai/ArxContainer@^0.6.0
